--- a/style.css
+++ b/style.css
@@ -56,7 +56,9 @@ h1{
 h2{
 	color: #FD9600; text-align: center; font-size: 40px;
 }
-
+.mar{
+	margin-top: 200px;
+	font-size: 50px;
 	
 footer{
 	padding-top: 500px;
